--- a/1-EntradaSalida/EntradaSalida-09.html
+++ b/1-EntradaSalida/EntradaSalida-09.html
@@ -37,7 +37,7 @@
   <div class="col-6 col-s-9">
    	
 		<form class=" animated bounceInLeft FormIngreso">
-		<h1>Ingrese Dos números</h1>
+		<h1>Ingrese su sueldo</h1>
 				<input type="text"  placeholder="Ingrese sueldo" id="txtIdSueldo">
 
 				<input type="text" readonly  placeholder="Resultado" id="txtIdResultado">
@@ -54,9 +54,9 @@
   <h2>Enunciado:</h2>
 			
 				<h3>
-					Debemos lograr tomar el importe por ID.value ,
+					Debemos lograr tomar el sueldo por ID.value ,
 					</br>transformarlo a entero "parseInt()", luego
-					</br>mostrar el importe con un aumento del 10 %. en el cuadro de texto "txtIdResultado"
+					</br>mostrar el sueldo con un aumento del 10 %. en el cuadro de texto "txtIdResultado"
 				</h3>
      
     </div>
